Finish pricing section. Add Newsletter and footer.

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <h1 class="company-name">Rubber Ducks Unlimited</h1>
             <nav id="nav-bar" class="main-nav">
                 <ul class="nav-links">
-                    <li class="nav-link"><a href="#about">Our Story</a></li>
-                    <li class="nav-link"><a href="#about">Our Process</a></li>
-                    <li class="nav-link"><a href="#factory">Pricing</a></li>
-                    <li class="nav-link"><a href="#">Contact</a></li>
+                    <li><a class="nav-link" href="#about">Our Story</a></li>
+                    <li><a class="nav-link" href="#factory">Our Process</a></li>
+                    <li><a class="nav-link" href="#pricing">Pricing</a></li>
+                    <li><a class="nav-link" href="#newsletter">Newsletter</a></li>
                 </ul>
             </nav>
         </header>
@@ -46,24 +46,67 @@
         </section>
         <section id="factory" class="factory">
             <h3 class="section-heading">How our Ducks are Made</h3>
-            <iframe id="video" class="factory-video" width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe id="video" class="factory-video" width="560" height="315" src="https://www.youtube.com/embed/Mh85R-S-dh8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
         <section id="pricing" class="pricing">
             <h3 class="section-heading">Find the Duckie for You</h3>
             <div class="price-cards">
                 <div class="price-card">
-                <h4 class="card-heading">Single Duck</h4>
+                    <div class="card-header">
+                        <h4 class="card-heading">One Single Duck</h4>
+                        <h5 class="card-price">7</h5>
+                    </div>
+                    <ul class="card-features">
+                        <li>Lorem Ipsum</li>
+                        <li>Dolor Sit Amet</li>
+                        <li>Consectetur</li>
+                    </ul>
+                    <a href="#" class="btn btn-ghost card-btn">Buy Now</a>
                 </div>
                 <div class="price-card">
-                    <h4 class="card-heading">One Dozen Ducks</h4>
+                    <div class="card-header">
+                        <h4 class="card-heading">One Dozen Ducks</h4>
+                        <h5 class="card-price">70</h5>
+                    </div>
+                    <ul class="card-features">
+                        <li>Lorem Ipsum</li>
+                        <li>Dolor Sit Amet</li>
+                        <li>Consectetur</li>
+                    </ul>
+                    <a href="#" class="btn btn-ghost card-btn">Buy Now</a>
                 </div>
                 <div class="price-card">
-                    <h4 class="card-heading">Duck Subscription</h4>
+                    <div class="card-header header-highlighted">
+                        <h4 class="card-heading">Duck Subscription</h4>
+                        <h5 class="card-price subscription">7</h5>
+                    </div>
+                    <ul class="card-features">
+                        <li>Lorem Ipsum</li>
+                        <li>Dolor Sit Amet</li>
+                        <li>Consectetur</li>
+                    </ul>
+                    <a href="#" class="btn btn-solid card-btn">Buy Now</a>
                 </div>
             </div>
-            
+        </section>
+        <section id="newsletter" class="newsletter">
+            <div class="signup-box">
+                <h3 class="section-heading">Sign Up for our Newsletter</h3>
+                <form id="form" action="https://www.freecodecamp.com/email-submit">
+                    <input type="email" id="email" class="newsletter-textinput" name="email" placeholder="Enter your Email"><br>
+                    <input type="submit" id="submit" class="btn btn-solid" value="Subscribe">
+                </form>
+            </div>
         </section>
     </div>
+    <footer id="footer" class="footer">
+        <div class="container">
+            <p>Copyright 2019 &copy; Evan Fetherolf</p>
+            <p>This page was created as a part of the <a href="#">Free Code Camp</a> curriculum, and is for educational purposes only. Rubber Ducks Unlimited is not a real brand.</p>
+            <p></p>Logo icon made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p>
+            <p>Photo credits&mdash;Rubber Duck: Anthony from Pexels. "Dr. Duckie:" Michał Parzuchowski on Unsplash.</p>
+        </div>
+    </footer>
 
     <!-- <div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> -->
     <!-- Photo by Anthony from Pexels -->
