--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav id="nav-bar" class="main-nav">
                 <ul class="nav-links">
                     <li><a class="nav-link" href="#about">Our Story</a></li>
-                    <li><a class="nav-link" href="#factory">Our Process</a></li>
+                    <li><a class="nav-link" href="#products">Products</a></li>
                     <li><a class="nav-link" href="#pricing">Pricing</a></li>
                     <li><a class="nav-link" href="#newsletter">Newsletter</a></li>
                 </ul>
@@ -44,8 +44,8 @@
                 <p class="about-description">Here at Rubber Ducks Unlimited, we only use the finest rubber for our duckies, ensuring that your rubber duck will last for generations to come. We believe a rubber duck should be an investment, not just a purchase, and the quality of our ducks reflects that.</p>
             </div>
         </section>
-        <section id="factory" class="factory">
-            <h3 class="section-heading">How our Ducks are Made</h3>
+        <section id="products" class="factory">
+            <h3 class="section-heading">Check Out our Products in Action</h3>
             <iframe id="video" class="factory-video" width="560" height="315" src="https://www.youtube.com/embed/Mh85R-S-dh8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
         <section id="pricing" class="pricing">
@@ -107,10 +107,6 @@
             <p>Photo credits&mdash;Rubber Duck: Anthony from Pexels. "Dr. Duckie:" Michał Parzuchowski on Unsplash.</p>
         </div>
     </footer>
-
-    <!-- <div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> -->
-    <!-- Photo by Anthony from Pexels -->
-    <!-- Photo by Michał Parzuchowski on Unsplash -->
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
